--- a/eiotraining/templates/problemset.html
+++ b/eiotraining/templates/problemset.html
@@ -7,8 +7,12 @@
 {% for navevent in navevents %}
 	{% if navevent[0] == 0 %}
 		{% if navevent[1][2] == 0 %}
+			<div>
 			<input type="button" class="nav-closed" id="navbutton-{{navevent[1][1]}}" onclick="navtoggle('{{navevent[1][1]}}')" value="{{navevent[1][3]}}">
-			<a class="nav-delete" href="/problemset/delete/{{navevent[1][1]}}">delete</a>
+			{% if admin %}
+				<a class="nav-delete" href="/problemset/delete/{{navevent[1][1]}}">delete</a>
+			{% endif %}
+			</div>
 			<div class="nav-folder" id="navdiv-{{navevent[1][1]}}">
 		{% elif navevent[1][2] == 1 %}
 			<div><a class="nav-tutorial" href="/problemset/{{navevent[1][1]}}">{{navevent[1][3]}}</a>
