HTML validation update

--- a/eiotraining/templates/index.html
+++ b/eiotraining/templates/index.html
@@ -1,4 +1,8 @@
 {% extends "frame.html" %}
+{% block title %}
+EIOtraining
+{% endblock %}
+
 {% block body %}
 {% for post in posts_and_users %}
 <h3>{{post[0][0]}}</h3> {{post[1]}} {{post[0][3]}} <br>
