--- a/eiotraining/templates/frame.html
+++ b/eiotraining/templates/frame.html
@@ -1,5 +1,12 @@
 <!DOCTYPE html>
 <html>
+
+<head>
+	<title>
+	{% block title %} {% endblock %}
+	</title>
+</head>
+
 <link rel="stylesheet" type="text/css" href="/static/style.css">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script src="/static/utils.js"></script>
