--- a/eiotraining/templates/login.html
+++ b/eiotraining/templates/login.html
@@ -1,4 +1,8 @@
 {% extends "frame.html" %}
+{% block title %}
+Login - EIOtraining
+{% endblock %}
+
 {% block body %}
 <form method="post">
 	<table>
@@ -11,7 +15,7 @@
 			<td><input type="password" name="password"></td>
 		</tr>
 	</table>
-	<span style="color:red;">{{error}}</span><br>
+	<span class="errormsg">{{error}}</span><br>
 	<input type="submit" value="Log in">
 </form>
 {% endblock %}
