--- a/eiotraining/templates/navadd.html
+++ b/eiotraining/templates/navadd.html
@@ -1,4 +1,8 @@
 {% extends "frame.html" %}
+{% block title %}
+Problemset - EIOtraining
+{% endblock %}
+
 {% block body %}
 <form method="post">
 	Type:<br>
@@ -9,7 +13,7 @@
 	</select><br>
 	Description:<br>
 	<input name="description" value="{{description}}"> <br>
-	<span style="color:red;">{{error}}</span> <br>
+	<span class="errormsg">{{error}}</span> <br>
 	<input type="submit" value="submit">
 </form>
 {% endblock %}
