--- a/eiotraining/templates/newpost.html
+++ b/eiotraining/templates/newpost.html
@@ -1,11 +1,15 @@
 {% extends "frame.html" %}
+{% block title %}
+News - EIOtraining
+{% endblock %}
+
 {% block body %}
 <form method="post">
 	Title:<br>
 	<input name="title" value="{{title}}"> <br>
 	Content:<br>
 	<textarea name="content">{{content}}</textarea> <br>
-	<span style="color:red;">{{error}}</span> <br>
+	<span class="errormsg">{{error}}</span> <br>
 	<input type="submit" value="submit">
 </form>
 {% endblock %}
