--- a/eiotraining/templates/problemset.html
+++ b/eiotraining/templates/problemset.html
@@ -1,4 +1,8 @@
 {% extends "frame.html" %}
+{% block title %}
+Problemset - EIOtraining
+{% endblock %}
+
 {% block body %}
 
 <script src="/static/psload.js"></script>
