--- a/eiotraining/templates/signup.html
+++ b/eiotraining/templates/signup.html
@@ -1,4 +1,8 @@
 {% extends "frame.html" %}
+{% block title %}
+Signup - EIOtraining
+{% endblock %}
+
 {% block body %}
 <form method="post">
 	<table>
@@ -7,7 +11,7 @@
 			<td><input name="user" value="{{user}}"></td>
 			{% if invalid_user %}
 				<td>
-				<span style="color:red;">Username must contain 3-20 characters and consist of latin letters, numbers, hyphens and/or underscores</span>
+				<span class="errormsg">Username must contain 3-20 characters and consist of latin letters, numbers, hyphens and/or underscores</span>
 				</td>
 			{% endif %}
 		</tr>
@@ -16,7 +20,7 @@
 			<td><input name="password" type="password"></td>
 			{% if invalid_password %}
 				<td>
-				<span style="color:red;">Password must contain 6-50 characters</span>
+				<span class="errormsg">Password must contain 6-50 characters</span>
 				</td>
 			{% endif %}
 		</tr>
@@ -25,7 +29,7 @@
 			<td><input name="verify" type="password"></td>
 			{% if invalid_verify %}
 				<td>
-				<span style="color:red;">Passwords don't match</span>
+				<span class="errormsg">Passwords don't match</span>
 				</td>
 			{% endif %}
 		</tr>
@@ -34,12 +38,12 @@
 			<td><input name="email" value="{{email}}"></td>
 			{% if invalid_email %}
 				<td>
-				<span style="color:red;"> Invalid email</span>
+				<span class="errormsg"> Invalid email</span>
 				</td>
 			{% endif %}
 		</tr>
 	</table>
-	<span style="color:red;">{{error}}</span><br>
+	<span class="errormsg">{{error}}</span><br>
 	<input type="submit" value="Sign up">
 </form>
 {% endblock %}
