--- a/eiotraining/templates/frame.html
+++ b/eiotraining/templates/frame.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html xml:lang="en" lang="en">
 
 <head>
 	<link rel="stylesheet" type="text/css" href="/static/style.css">
