--- a/eiotraining/templates/en/psedit.html
+++ b/eiotraining/templates/en/psedit.html
@@ -1,4 +1,6 @@
-{% extends "frame.html" %}
+{% set site = "/problemset/edit" %}
+
+{% extends "en/frame.html" %}
 {% block title %}
 Problemset - EIOtraining
 {% endblock %}
