--- a/eiotraining/templates/en/newpost.html
+++ b/eiotraining/templates/en/newpost.html
@@ -1,4 +1,6 @@
-{% extends "frame.html" %}
+{% set site = "/newpost" %}
+
+{% extends "en/frame.html" %}
 {% block title %}
 News - EIOtraining
 {% endblock %}
