--- a/eiotraining/templates/en/login.html
+++ b/eiotraining/templates/en/login.html
@@ -9,6 +9,7 @@ Login - EIOtraining
 {% block head %}
 	<script src="https://apis.google.com/js/platform.js" async defer></script>
 	<meta name="google-signin-client_id" content="662074927941-q2vfnrddgh6o59avpas4gfnp7d7ft1ro.apps.googleusercontent.com">
+	<script src="login.js"></script>
 {% endblock %}
 
 
