--- a/eiotraining/templates/et/login.html
+++ b/eiotraining/templates/et/login.html
@@ -19,5 +19,7 @@ Sisse Logimine - EIOtraining
 	</table>
 	<span class="errormsg">{{error}}</span><br>
 	<input type="submit" value="Log in">
+	
+	<div class="g-signin2" data-onsuccess="onSignIn"></div>
 </form>
 {% endblock %}
