--- a/eiotraining/templates/et/frame.html
+++ b/eiotraining/templates/et/frame.html
@@ -13,7 +13,7 @@
 	
 	<script src="https://apis.google.com/js/platform.js?onload=onLoadCallback" async defer></script>
 	<meta name="google-signin-client_id" content="662074927941-q2vfnrddgh6o59avpas4gfnp7d7ft1ro.apps.googleusercontent.com">
-	<script src="static/login.js"></script>
+	<script src="/static/login.js"></script>
 </head>
 
 <body>
