--- a/eiotraining/templates/en/index.html
+++ b/eiotraining/templates/en/index.html
@@ -7,9 +7,17 @@ EIOtraining
 {% endblock %}
 
 {% block body %}
-{% for post in posts_and_users %}
-<h3>{{post[0][0]}}</h3> {{post[1]}} {{post[0][3]}} <br>
-{{post[0][1]|safe}}
+<div>
+	User:
+	<input id="username">
+	<input type="button" value="search" onclick="getNews();">
+</div>
+
+<div id="news">
+	{% for post in posts_and_users %}
+	<h3>{{post[0][0]}}</h3> {{post[1]}} {{post[0][3]}} <br>
+	{{post[0][1]|safe}}
 <hr>
+</div>
 {% endfor %}
 {% endblock %}
