--- a/eiotraining/templates/et/index.html
+++ b/eiotraining/templates/et/index.html
@@ -6,9 +6,17 @@ EIOtraining
 {% endblock %}
 
 {% block body %}
-{% for post in posts_and_users %}
-<h3>{{post[0][0]}}</h3> {{post[1]}} {{post[0][3]}} <br>
-{{post[0][1]|safe}}
-<hr>
-{% endfor %}
+<div>
+	Kasutaja:
+	<input id="username">
+	<input type="button" value="search" onclick="getNews();">
+</div>
+
+<div id="news">
+	{% for post in posts_and_users %}
+	<h3>{{post[0][0]}}</h3> {{post[1]}} {{post[0][3]}} <br>
+	{{post[0][1]|safe}}
+	<hr>
+	{% endfor %}
+</div>
 {% endblock %}
