--- a/eiotraining/templates/en/frame.html
+++ b/eiotraining/templates/en/frame.html
@@ -3,6 +3,7 @@
 
 <head>
 	<link rel="stylesheet" type="text/css" href="/static/style.css">
+	<link rel="icon" href="static/icon.png" type="image/png" sizes="16x16"> 
 	<link rel="alternate" href="{{site}}" hreflang="en">
 	<link rel="alternate" href="/et{{site}}" hreflang="et">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
