--- a/eiotraining/templates/en/frame.html
+++ b/eiotraining/templates/en/frame.html
@@ -12,9 +12,7 @@
 	{% block title %} {% endblock %}
 	</title>
 	
-	<script src="https://apis.google.com/js/platform.js?onload=onLoadCallback" async defer></script>
-	<meta name="google-signin-client_id" content="662074927941-q2vfnrddgh6o59avpas4gfnp7d7ft1ro.apps.googleusercontent.com">
-	<script src="/static/login.js"></script>
+	{% block head %} {% endblock %}
 </head>
 
 <body>
