--- a/eiotraining/templates/en/logout.html
+++ b/eiotraining/templates/en/logout.html
@@ -2,6 +2,7 @@
 <html xml:lang="en" lang="en">
 
 <head>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 	<script src="https://apis.google.com/js/platform.js?onload=onLoadCallback" async defer></script>
 	<meta name="google-signin-client_id" content="662074927941-q2vfnrddgh6o59avpas4gfnp7d7ft1ro.apps.googleusercontent.com">
 	<script src="/static/logout.js"></script>
