--- a/eiotraining/templates/en/logout.html
+++ b/eiotraining/templates/en/logout.html
@@ -9,5 +9,5 @@
 </head>
 
 <body>
-Logging out. If logout doesn't happen automatically, click <a href="{{lang}}/">here</a>
+Logging out. If logout doesn't happen automatically, click <a href="{{lang}}/">here</a> <a href="#" id="logoutlink">script</a>
 </body>
