--- a/eiotraining/templates/et/problemset.html
+++ b/eiotraining/templates/et/problemset.html
@@ -7,7 +7,7 @@
 
 {% block body %}
 
-<script src="/static/psload.js"></script>
+<script src="/static/psload.js" defer></script>
 
 
 {% for navevent in navevents %}
