--- a/eiotraining/templates/en/frame.html
+++ b/eiotraining/templates/en/frame.html
@@ -6,8 +6,8 @@
 	<link rel="icon" href="static/icon.png" type="image/png" sizes="16x16"> 
 	<link rel="alternate" href="{{site}}" hreflang="en">
 	<link rel="alternate" href="/et{{site}}" hreflang="et">
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-	<script src="/static/utils.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js" defer></script>
+	<script src="/static/utils.js" defer></script>
 	<title>
 	{% block title %} {% endblock %}
 	</title>
