--- a/eiotraining/templates/et/frame.html
+++ b/eiotraining/templates/et/frame.html
@@ -3,6 +3,7 @@
 
 <head>
 	<link rel="stylesheet" type="text/css" href="/static/style.css">
+	<link rel="icon" href="static/icon.png" type="image/png" sizes="16x16"> 
 	<link rel="alternate" href="{{site}}" hreflang="en">
 	<link rel="alternate" href="/et{{site}}" hreflang="et">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
@@ -11,9 +12,7 @@
 	{% block title %} {% endblock %}
 	</title>
 	
-	<script src="https://apis.google.com/js/platform.js?onload=onLoadCallback" async defer></script>
-	<meta name="google-signin-client_id" content="662074927941-q2vfnrddgh6o59avpas4gfnp7d7ft1ro.apps.googleusercontent.com">
-	<script src="/static/login.js"></script>
+	{% block head %} {% endblock %}
 </head>
 
 <body>
