--- a/eiotraining/templates/en/frame.html
+++ b/eiotraining/templates/en/frame.html
@@ -2,7 +2,9 @@
 <html xml:lang="en" lang="en">
 
 <head>
-	<link rel="stylesheet" type="text/css" href="/static/style.css">
+	<noscript id="deferred-styles">
+		<link rel="stylesheet" type="text/css" href="/static/style.css">
+    </noscript>
 	<link rel="icon" href="static/icon.png" type="image/png" sizes="16x16"> 
 	<link rel="alternate" href="{{site}}" hreflang="en">
 	<link rel="alternate" href="/et{{site}}" hreflang="et">
