--- a/eiotraining/templates/en/frame.html
+++ b/eiotraining/templates/en/frame.html
@@ -2,6 +2,15 @@
 <html xml:lang="en" lang="en">
 
 <head>
+    <style>
+		.inlinetitle {
+			font-size: 1.75em;
+		}
+		.nav-folder {
+			margin-left: 10px;
+		}
+    </style>
+
 	<noscript id="deferred-styles">
 		<link rel="stylesheet" type="text/css" href="/static/style.css">
     </noscript>
