--- a/eiotraining/templates/et/frame.html
+++ b/eiotraining/templates/et/frame.html
@@ -2,12 +2,23 @@
 <html xml:lang="et" lang="et">
 
 <head>
-	<link rel="stylesheet" type="text/css" href="/static/style.css">
+    <style>
+		.inlinetitle {
+			font-size: 1.75em;
+		}
+		.nav-folder {
+			margin-left: 10px;
+		}
+    </style>
+	
+	<noscript id="deferred-styles">
+		<link rel="stylesheet" type="text/css" href="/static/style.css">
+    </noscript>
 	<link rel="icon" href="static/icon.png" type="image/png" sizes="16x16"> 
 	<link rel="alternate" href="{{site}}" hreflang="en">
 	<link rel="alternate" href="/et{{site}}" hreflang="et">
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-	<script src="/static/utils.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js" defer></script>
+	<script src="/static/utils.js" defer></script>
 	<title>
 	{% block title %} {% endblock %}
 	</title>
