--- a/eiotraining/templates/en/problemset.html
+++ b/eiotraining/templates/en/problemset.html
@@ -8,6 +8,13 @@ Problemset - EIOtraining
 {% block body %}
 
 <script src="/static/psload.js" defer></script>
+<script>
+var x = document.getElementsByClassName("nav-folder");
+var i;
+for(i = 0; i < x.length; i++) {
+	x[i].style.display = 'none';
+}
+</script>
 
 
 {% for navevent in navevents %}
