--- a/eiotraining/templates/et/problemset.html
+++ b/eiotraining/templates/et/problemset.html
@@ -9,7 +9,7 @@
 
 <script src="/static/psload.js" defer></script>
 
-<div style="float:right;text-align:right;">
+<div>
 {% for navevent in navevents %}
 	{% if navevent[0] == 0 %}
 		{% if navevent[1][2] == 0 %}
