--- a/eiotraining/templates/en/index.html
+++ b/eiotraining/templates/en/index.html
@@ -7,7 +7,7 @@ EIOtraining
 
 {% block body %}
 <div>
-	User:
+	<label for="username">User:</label>
 	<input id="username">
 	<input type="button" value="search" onclick="getNews();">
 </div>
