--- a/eiotraining/templates/et/index.html
+++ b/eiotraining/templates/et/index.html
@@ -7,7 +7,7 @@ EIOtraining
 
 {% block body %}
 <div>
-	Kasutaja:
+	<label for="username">Kasutaja:</label>
 	<input id="username">
 	<input type="button" value="search" onclick="getNews();">
 </div>
