--- a/eiotraining/templates/en/login.html
+++ b/eiotraining/templates/en/login.html
@@ -17,12 +17,12 @@ Login - EIOtraining
 <form method="post">
 	<table>
 		<tr>
-			<td>Username:</td>
-			<td><input name="user" value="{{user}}"></td>
+			<td><label for="user">Username:</label></td>
+			<td><input name="user" id="user" value="{{user}}"></td>
 		</tr>
 		<tr>
-			<td>Password:</td>
-			<td><input type="password" name="password"></td>
+			<td><label for="password">Password:</label></td>
+			<td><input type="password" id="password" name="password"></td>
 		</tr>
 	</table>
 	<span class="errormsg">{{error}}</span><br>
