--- a/eiotraining/templates/et/login.html
+++ b/eiotraining/templates/et/login.html
@@ -17,12 +17,12 @@ Sisse Logimine - EIOtraining
 <form method="post">
 	<table>
 		<tr>
-			<td>Kasutajanimi:</td>
-			<td><input name="user" value="{{user}}"></td>
+			<td><label for="user">Kasutajanimi:</label></td>
+			<td><input name="user" id="user" value="{{user}}"></td>
 		</tr>
 		<tr>
-			<td>Parool:</td>
-			<td><input type="password" name="password"></td>
+			<td><label for="password">Parool:</label></td>
+			<td><input type="password" id="password" name="password"></td>
 		</tr>
 	</table>
 	<span class="errormsg">{{error}}</span><br>
