--- a/eiotraining/templates/et/signup.html
+++ b/eiotraining/templates/et/signup.html
@@ -13,7 +13,7 @@ Konto Loomine - EIOtraining
 			<td><input name="user" id="user" value="{{user}}"></td>
 			{% if invalid_user %}
 				<td>
-				<span class="errormsg">Salasõnad peavad sisaldama 3-20 kirjamärki ja koosnema ladina tähtedest, numbritest, side- ja/või alakriipsudest</span>
+				<span class="errormsg">Kasutajanimed peavad sisaldama 3-20 kirjamärki ja koosnema ladina tähtedest, numbritest, side- ja/või alakriipsudest</span>
 				</td>
 			{% endif %}
 		</tr>
